# repro-git-hook

./: README.md  ai_audit_log.json  auditor.py  pyproject.toml
src/repro_hook/: __init__.py  cli.py
tests/: test_auditor.py
